--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.4.0",
     "native-base": "3.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
