--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "expo": "^45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-asset": "~8.5.0",
@@ -40,7 +41,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.31.2",
-    "react-native": "0.68.1",
+    "react-native": "0.68.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "5.4.15",
     "react-native-safe-area-context": "4.2.4",
@@ -50,7 +51,9 @@
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1",
     "react-query": "^3.39.0",
-    "recyclerlistview": "^3.2.0-beta.4"
+    "recyclerlistview": "^3.2.0-beta.4",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
