--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-haptics": "~11.2.0",
+    "expo-linking": "~3.1.0",
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
